--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,8 @@
 PORT=5000
-MONGO_URI=mongodb+srv://chinthahemanthreddy07:fhUgGEfqBXMX1V7Y@cluster0.loh1tcu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=hemanth_522004
-CLOUD_NAME=dmohkevtv
-CLOUD_API_KEY=917329681634943
-CLOUD_API_SECRET=MZ944BhVQCCtAPkWdhEjhz4vX-s
-ADMIN_EMAIL=nani@example.com
+MONGO_URI=mongodb+srv://pradeep27maddineni:iQqXtHGbEEFfH5Bq@cluster0.frytvzs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=pradeep_22116055
+ClOUD_NAME=dhyxqg4xt
+CLOUD_API_KEY=417528561486249
+CLOUD_API_SECRET=PsEznbmdb_nlkal3nQ6vEsfelIo
+ADMIN_EMAIL=pradeep@example.com
 ADMIN_PASSWORD=123456789
