--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
-node_modules
+node_modules/
+**/node_modules/
+.env
+**/.env
+dist/
+build/
+.cache/
+.vite/
+vite-dist/
+coverage/
+.next/
+out/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+*.log
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+.vscode/
+.idea/
+*.iml
+notes.txt
+*.local
+*.env.local
+.env.development.local
+.env.production.local
+uploads/
+temp/
